--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"scripts": {
 		"start": "vite dev --open",
+		"deploy": "bash deploy.sh",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
