--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"strict": true,
 		"paths": {
 			"@/*": ["./src/*"],
-			"$lib/*": ["./src/lib/*"]
+			"$lib":["./src/lib"],
+  		"$lib/*":["./src/lib/*"]
 		}
 	}
 }
